# ycmd-rust

./: .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  Cargo.toml  Makefile  build.rs  conanfile.py
core/: CMakeLists.txt  Character.h  IdentifierCompleter.cpp  IdentifierCompleter.h  IdentifierDatabase.cpp  Word.cpp  Word.h  rust.h
src/: main.rs
ycmd/: CMakeLists.txt  build.rs
ycmd/src/: main.rs
