[package]
name = "ycmd-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
autocxx-build = "0.23.1"
miette = { version = "5", features = ["fancy"] }

[dependencies]
autocxx = "0.23.1"
cxx = "1.0"

